Fix friends list spacing

--- a/app/assets/stylesheets/patterns/_profile_friends.scss
+++ b/app/assets/stylesheets/patterns/_profile_friends.scss
@@ -22,7 +22,7 @@
   background: white;
   min-height: 0px;
   list-style: none;
-  padding: 7px 0;
+  padding: 0 0;
 }
 
 .pro-friend-block {
@@ -31,7 +31,7 @@
   height: 110px;
   width: 400px;
   border: 1px solid $background-grey;
-  margin: 7px;
+  margin: 7px 7px 7px 12px;
 }
 
 .pro-friend-pic {
